--- a/data.html
+++ b/data.html
@@ -18,13 +18,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Data</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Comparisons.html">Comparisons</a>
+                <a class="nav-link" href="Comparisons.html">Comparisons</a>
             </li>
             
             <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
                 Plots
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\visual 1.html">fig.1 - Temperature</a>
+                <a class="dropdown-item" href="visual 1.html">fig.1 - Temperature</a>
                 <a class="dropdown-item" href="#">fig.2 - Humidity</a>
                 <a class="dropdown-item" href="#">fig.3 - Cloudiness</a>
                 <a class="dropdown-item" href="#">fig.3 - Wind Speed</a>
@@ -56,7 +56,7 @@
       </div>
     
 
-    <iframe  height ='700px'width='60%'style="border:1px solid black" src="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\table.html" title="W3Schools Free Online Web Tutorials"></iframe>
+    <iframe  height ='700px'width='60%'style="border:1px solid black" src="table.html" title="data table"></iframe>
 
 
     <table class="table table-striped table-dark">
