--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\data.html">Data</a>
+              <a class="nav-link" href="data.html">Data</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Comparisons.html">Comparisons</a>
+                <a class="nav-link" href="Comparisons.html">Comparisons</a>
             </li>
             
             <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
                 Plots
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\visual 1.html">fig.1 - Temperature</a>
+                <a class="dropdown-item" href="visual 1.html">fig.1 - Temperature</a>
                 <a class="dropdown-item" href="#">fig.2 - Humidity</a>
                 <a class="dropdown-item" href="#">fig.3 - Cloudiness</a>
                 <a class="dropdown-item" href="#">fig.3 - Wind Speed</a>
@@ -63,17 +63,17 @@
 
 <div class="container">
     <h2 class="display-4"> Visualizations</h2>
-    <a href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig1.png">
-        <img src="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig1.png" alt="lat vs. max temp" style="width:460px;height:460px;">
+    <a href="Resources\assets\images\Fig1.png">
+        <img src="Resources\assets\images\Fig1.png" alt="lat vs. max temp" style="width:460px;height:460px;">
       </a>
-    <a href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig2.png">
-        <img src="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig2.png" alt="lat vs. humidity" style="width:460px;height:460px;">
+    <a href="Resources\assets\images\Fig2.png">
+        <img src="Resources\assets\images\Fig2.png" alt="lat vs. humidity" style="width:460px;height:460px;">
     </a>
-    <a href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig3.png">
-        <img src="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig3.png" alt="lat vs. cloudiness" style="width:460px;height:460px;">
+    <a href="Resources\assets\images\Fig3.png">
+        <img src="Resources\assets\images\Fig3.png" alt="lat vs. cloudiness" style="width:460px;height:460px;">
     </a>
-    <a href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig4.png">
-        <img src="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig4.png" alt="lat vs. windspeed" style="width:460px;height:460px;">
+    <a href="Resources\assets\images\Fig4.png">
+        <img src="Resources\assets\images\Fig4.png" alt="lat vs. windspeed" style="width:460px;height:460px;">
     </a>
 </div>
 
