--- a/visual 1.html
+++ b/visual 1.html
@@ -18,13 +18,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Data</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Comparisons.html">Comparisons</a>
+                <a class="nav-link" href="Comparisons.html">Comparisons</a>
             </li>
             
             <li class="nav-item dropdown">
@@ -63,8 +63,8 @@
       </div>
       <div class = "row">
           <div class="col"> 
-            <a href="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig1.png">
-                <img src="C:\Users\new user\Documents\homework repositories\Web-Design-Challenge\Resources\assets\images\Fig1.png" alt="lat vs. max temp" style="width:460px;height:460px;">
+            <a href="Resources\assets\images\Fig1.png">
+                <img src="Resources\assets\images\Fig1.png" alt="lat vs. max temp" style="width:460px;height:460px;">
               </a>
           </div>
       </div>
