--- a/visual 1.html
+++ b/visual 1.html
@@ -21,7 +21,7 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Data</a>
+              <a class="nav-link" href="data.html">Data</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="Comparisons.html">Comparisons</a>
